<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/default_fragment_menu_item"
            android:title="Default Fragment"
            />
    </group>
    <group>
        <item android:title="Students Related">
            <menu>
                <item
                    android:id="@+id/send_announcement_menu_item"
                    android:title="@string/send_announcement"/>
                <item
                    android:id="@+id/send_task_menu_item"
                    android:title="@string/send_task"/>
                <item
                    android:id="@+id/tasks_menu_item"
                    android:title="@string/tasks"
                    />
            </menu>
        </item>
    </group>
    <group>
        <item android:title="Developer Related">
            <menu>
                <item
                    android:id="@+id/about_developer_menu_item"
                    android:title="@string/about_developer" />
            </menu>
        </item>
    </group>
</menu>